fix: poster vertical alignment

--- a/style/mobilestyles.css
+++ b/style/mobilestyles.css
@@ -2,9 +2,9 @@
   #tictechtoelogo {
     height: 15vw;
     width: 75vw;
-    margin-top:10vw; 
+    margin-top: 10vw;
   }
   .img-wrap {
-    padding-top: 25vh;
+    padding-top: 10vh;
   }
 }
